2005-04-16  Uros Bizjak  <uros@kss-loka.si>

	PR middle-end/27134
	* builtins.c (expand_builtin_int_roundingfn): Use expand_expr()
	to expand fallback builtin function call.

2006-04-14  Alexey Starovoytov  <alexey.starovoytov@sun.com>
            Eric Botcazou  <ebotcazou@libertysurf.fr>

	* config/sparc/sparc.c (emit_and_preserve): Allocate space for the
	register save area.

2006-04-13  Paolo Bonzini  <bonzini@gnu.org>
	    Ulrich Weigand  <uweigand@de.ibm.com>

	PR target/27006
	* config/rs6000/rs6000.h (EASY_VECTOR_15_ADD_SELF): Require n
	to be even.

2006-04-13  Alan Modra  <amodra@bigpond.net.au>

	PR target/26459
	* config/rs6000/rs6000.c (rs6000_legitimize_reload_address): Don't
	optimize to lo_sum for DFmode if !TARGET_FPRS.

2006-04-07  Jan Hubicka  <jh@suse.cz>

	* ipa-inline.c (cgraph_early_inlining): Collect garbage.

2006-04-11  Mark Mitchell  <mark@codesourcery.com>

	PR target/26459
	* config/rs6000/e500-double.h (SUB3TARGET_OVERRIDE_OPTIONS): Test
	rs6000_explicit_options.float_gprs.

2006-04-10  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* doc/install.texi (*-*-solaris2*): Point to the configure page.

2006-04-10  Jakub Jelinek  <jakub@redhat.com>

	PR debug/27057
	* dwarf2out.c (is_symbol_die): Return true also for namespaces.

2006-04-09  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/26508
	* config.gcc (hppa*64*-*-hpux11*): Add 'libgcc_stub.a' to extra_parts.
	* pa64-hpux.h (LIB_SPEC): Don't append milli.a.
	(LINK_GCC_C_SEQUENCE_SPEC): Define.  Append milli.a here.
	(PA_CXA_FINALIZE_STUB, PA_JV_REGISTERCLASSES_STUB): Delete defines.
	(PA_INIT_FINI_HACK): Rename to PA_CRTBEGIN_HACK.
	(PA_CRTBEGIN_HACK): Ensure __do_global_ctors_aux is placed in text
	section.  Delete PA_CXA_FINALIZE_STUB and PA_JV_REGISTERCLASSES_STUB
	stubs.  Add ".align 8" directives before all ".dword" directives.
	(GTHREAD_USE_WEAK): Revise comment.
	(TARGET_ATTRIBUTE_WEAK): Define.
	* pa/t-pa64 (LIBGCCSTUB_OBJS): Add new rules for stublib.c, rfi-stub.o,